Added environment variable for the secret key

--- a/api-task/src/main/resources/application.properties
+++ b/api-task/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=username
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+api.security.token.secret=${JWT_SECRET:default_key}
